# noesis

./: .gitignore  LICENSE  README.md  pyproject.toml
noesis/: __init__.py  cli.py  compare_unet_soulprints.py  noesis_trace.py  soulprint_compare.py  unet_soulprint.py
noesis/analysis/: moe_trace.py
noesis/tracing/: base_tracer.py  unet_tracer.py
noesis/utils/: io.py  tensor_stats.py
